[package]
name = "rustmimsms"
version = "0.1.0"
edition = "2021"
authors = ["tanvirsaklan"]
description = "A Rust library for sending automated SMS messages using the MIM SMS API provided by Robi"
license = "MIT"
repository = "https://github.com/tanvirsaklan/rustmimsms"
homepage = "https://github.com/tanvirsaklan/rustmimsms"
readme = "README.md"
keywords = ["sms", "messaging", "robi", "api", "bulk-sms", "mimsms"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }